2011-06-03  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [Chromium] cpu-profiler-profiling layout test is flaky on Linux Debug.
        https://bugs.webkit.org/show_bug.cgi?id=61533

        Skip cpu-profiler-profiling in debug, implement a fast headless alternative.

        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        (DRTDevToolsAgent::setJavaScriptProfilingEnabled):
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::setJavaScriptProfilingEnabled):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::setJavaScriptProfilingEnabled):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::setJavaScriptProfilingEnabled):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:

2011-06-02  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        NRWT needs a way to log to a file without including backspaces without needing --verbose
        https://bugs.webkit.org/show_bug.cgi?id=60328

        This change modifies NRWT so that if it can tell if it is
        writing to a terminal, it will overwrite any messages printed
        in the 'one-line-progress' and 'updates' print options, and if
        not (or if --verbose was specified) the messages will be printed
        without backspaces.

        If the overwriting updates are disabled, one-line-progress will
        only print every 10 seconds instead of on every update. This
        ensures that we still get updates once in a while while the
        tests are running, even if we're not in --verbose mode. Note
        that one-line-progress will now still be printed in --verbose,