@@ -1,3 +1,13 @@
+2011-06-03  Andras Becsi  <abecsi@webkit.org>
+
+        Reviewed by Csaba Osztrogonác.
+
+        Print error message when there is no httpd present on the system
+        https://bugs.webkit.org/show_bug.cgi?id=61939
+
+        * Scripts/old-run-webkit-tests: Propose to run with --no-httpd.
+        * Scripts/webkitperl/httpd.pm:
+
 2011-06-03  Mikhail Naganov  <mnaganov@chromium.org>
 
         Reviewed by Yury Semikhatsky.
